# tool_prime

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .rad.json  CITATION.cff  Dockerfile  Makefile  README.md  _config.yml  bulk_processing.bash  errorlog  main.py  nicholassynovic_prime.sqlite3  prime.sqlite3  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/DISCUSSION_TEMPLATE/: implementations.yml  requests.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build.yml  jekyll-gh-pages.yml  pre-commit.yml
docs/: prompts.md
docs/adr/: ADR_1_use-pytest-for-handling-unit-tests.md  ADR_2_have-a-cli-class-to-handle-command-line-input.md  ADR_3_use-gitpython-to-interface-with-the-`git`-vcs.md  ADR_4_use-sqlalchemy-to-handle-database-connections.md  ADR_5_use-pandas-to-store-information-about-commits.md  ADR_6_use-pydantic-to-perform-type-checking-on-dataframes.md  ADR_7_identify-release-revisions-of-a-repository.md  ADR_8_measure-code-size-by-lines-of-code.md
prime/: __init__.py  cli.py  main.py
prime/api/: __init__.py  db.py  issues.py  metrics.py  pull_requests.py  size.py  types.py  utils.py  vcs.py
src/: __init__.py  cli.py  main.py
src/api/: __init__.py  db.py  issues.py  metrics.py  pull_requests.py  size.py  types.py  utils.py  vcs.py
