[project]
name = "prime"
version = "0.1.3"
description = "Hello World"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["Template"]
classifiers = ["Development Status :: 1 - Planning"]
dependencies = [
    "gitpython>=3.1.44,<4",
    "sqlalchemy>=2.0.40,<3",
    "pandas>=2.2.3,<3",
    "progress~=1.6",
    "pydantic>=2.11.4,<3",
    "matplotlib>=3.10.3,<4",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/template_python"
Repository = "https://github.com/NicholasSynovic/template_python"

[project.scripts]
prime = "prime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
