[project]
name = "prime"
version = "1.1"
description = "PRocess Internal MEtrics tools (PRIME)"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = [
    "Empirical Software Engineering",
    "Software Metrics",
    "Process Metrics",
    "Longitudinal Analysis",
    "Productivity",
    "Issue Tracking",
    "Version Control",
    "Trend Analysis",
    "Open Source"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]
dependencies = [
    "gitpython>=3.1.44,<4",
    "sqlalchemy>=2.0.40,<3",
    "pandas>=2.2.3,<3",
    "progress~=1.6",
    "pydantic>=2.11.4,<3",
    "matplotlib>=3.10.3,<4",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/prime"
Repository = "https://github.com/NicholasSynovic/prime"

[project.scripts]
prime = "prime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
